# CppCursesTemplate

./: .gitmodules  CMakeLists.txt  NOTES.md  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
src/: CMakeLists.txt  main.cpp
